--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -79,12 +79,20 @@ header .searchProducts input{
 
 }
 header .searchProducts form button{
-    position: absolute;
+    position:absolute;
+    left:10;
+    width:30px;
     background-color: Transparent;
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
     overflow: hidden;  
+}
+header .searchProducts form{
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    padding-left:5px;
 }
 
 
