--- a/src/components/ProductsHomePage/index.css
+++ b/src/components/ProductsHomePage/index.css
@@ -1,5 +1,6 @@
 .containerDadProducts{
     display:flex;
+    flex-direction:column;
     margin-top: 10%;
     margin-left:10%;
     margin-rigth:10%;
@@ -8,8 +9,8 @@
 .containerDadProducts .containerCard{
     display:flex;
     flex-direction: column;
-    width:100%
-    
+    width:100%;
+    margin-bottom:10%;
 }
 .containerDadProducts .containerCard .sessionBestSellers{
     display:flex;
@@ -31,7 +32,7 @@
     display:flex;
     flex-direction:row;
     width:90%;
-    height:500px;
+    height:550px;
     justify-content: space-around;
     background-color:#D9D9D9;
     border-radius:70px
